--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -3,6 +3,7 @@
 
 include ../../makeopts
 
+SRC=$(wildcard *.cpp)
 TARGETS = strutil.o sysutil.o upgrade.o miscutil.o twofish2.o
 
 ifdef USE_LEAKTRACER
