--- a/src/wx/vcard/Makefile
+++ b/src/wx/vcard/Makefile
@@ -10,7 +10,11 @@ CPPFLAGS += -I.src
 all:	$(TARGETS)
 	@true
 
+
 include ../../../makerules $(wildcard *.d)
+
+msgcat:
+	@echo nothing to be done
 
 libversit_a_OBJECTS = vcc.o vobject.o # vcaltmp.o
 
@@ -21,5 +25,6 @@ libversit.a: $(libversit_a_OBJECTS)
 
 clean: stdclean
 	rm -f vcc.c
+
 
 .PHONY: clean all
