--- a/makeopts.in
+++ b/makeopts.in
@@ -22,8 +22,9 @@ ICONDIR=$(SOURCEDIR)/src/icons
 @MAKE_LIBTOOL@
 @MAKE_USE_MODULES@
 @MAKE_USE_LEAKTRACER@
-@MAKE_PISOCKLIB@
+@MAKE_HAVE_DOCTOOLS@
 @MAKE_HAVE_LIBMAL@
+@MAKE_PISOCKLIB@
 
 ifdef HAVE_LIBMAL
 LIBMAL_SRC := $(SOURCEDIR)/extra/src/libmal
