--- a/configure.in
+++ b/configure.in
@@ -711,35 +711,24 @@ dnl use scandoc
 DOCHTML="\$(SCANDOCHTML)"
 AC_SUBST(DOCHTML)
 
+AC_DEFUN([M_DOC_TOOL], [AC_PATH_PROG($1,$2)dnl
+case "$$1" in '') MAKE_HAVE_DOCTOOLS='' $1='false "No $2 available"' ;; esac
+AC_SUBST($1)])dnl
+
 dnl check for latex/dvips
-AC_PATH_PROG(PERL,perl)
-AC_PATH_PROG(LATEX,latex)
-AC_PATH_PROG(MAKEINDEX,makeindex)
-AC_PATH_PROG(DVIPS,dvips)
-if test "x$LATEX" = x -o "x$DVIPS" = x -o "x$MAKEINDEX" = x
-then
-	LATEX="echo \"No latex available.\""
-	DVIPS="echo \"No dvips available.\""
-	MAKEINDEX="echo \"No makeindex available.\""
-fi
-AC_SUBST(LATEX)
-AC_SUBST(DVIPS)
-AC_SUBST(MAKEINDEX)
-
-AC_PATH_PROG(PSTOPDF,ps2pdf)
-case "$PSTOPDF" in '')
-	PSTOPDF="echo \"ps2pdf not available.\""
+MAKE_HAVE_DOCTOOLS='HAVE_DOCTOOLS=yes'
+M_DOC_TOOL(PERL,perl)
+M_DOC_TOOL(LATEX,latex)
+M_DOC_TOOL(MAKEINDEX,makeindex)
+M_DOC_TOOL(DVIPS,dvips)
+M_DOC_TOOL(PSTOPDF,ps2pdf)
+M_DOC_TOOL(LATEX2HTML,latex2html)
+case "$MAKE_HAVE_DOCTOOLS" in '')
+AC_MSG_WARN([One of the tools required to build documentation
+is missing.  Documentation cannot be built on this system and you will need
+a pre-built Mdocs.tar.gz instead.]) ;;
 esac
-AC_SUBST(PSTOPDF)
-
-AC_PATH_PROG(LATEX2HTML,latex2html)
-case "$LATEX2HTML" in
-'')	LATEX2HTML="echo \"No doc generator(html) available.\""
-	MAKE_HAVE_LATEX2HTML='' ;;
-*)	MAKE_HAVE_SGMLTOOLS="HAVE_LATEX2HTML=yes" ;;
-esac
-AC_SUBST(MAKE_HAVE_LATEX2HTML)
-AC_SUBST(LATEX2HTML)
+AC_SUBST(MAKE_HAVE_DOCTOOLS)
 
 dnl --------------------------------------------------------------------------
 dnl add our extra directories to the search path
