For maximum compatibility, only one file can be installed in a single command.  With this fix, all the AFM and WAV files are installed (instead of just the first in the list).

--- a/extra/install/Makefile
+++ b/extra/install/Makefile
@@ -1,23 +1,25 @@
 # Makefile for extra/install directory
+# install the contents of all subdirs under this one
 
 SUB_DIRS = scripts
 
 include ../../makeopts
 
-# install the contents of all subdirs under this one
-#
 install:
 	set -e; for i in $(SUB_DIRS); \
-	  do $(INSTALL) -d $(DATADIR)/$$i ; \
-	  $(MAKE) -C $$i ; \
+	do $(INSTALL) -d $(DATADIR)/$$i; \
+	   $(MAKE) -C $$i; \
 	done
 	$(INSTALL) -d $(DATADIR)/afm
-	$(INSTALL_DATA) .src/afm/*.afm $(DATADIR)/afm
-	$(INSTALL_DATA) .src/newmail.wav .src/kylemail.wav $(DATADIR)
+	set -e; for i in .src/afm/*.afm; \
+	do $(INSTALL_DATA) $$i $(DATADIR)/afm; \
+	done
+	$(INSTALL_DATA) .src/newmail.wav $(DATADIR)
+	$(INSTALL_DATA) .src/kylemail.wav $(DATADIR)
 #	$(INSTALL_DATA) .src/mailcap $(DATADIR)
 	$(INSTALL_DATA) .src/M.conf $(DATADIR)
 	$(INSTALL) -d $(DESTDIR)/man/man1 
 	$(INSTALL_DATA) .src/mahogany.1 $(DESTDIR)/man/man1
 	$(INSTALL_DATA) .src/mahogany.1 $(DESTDIR)/man/man1/M.1
 
-.PHONY: all install clean
+.PHONY: install
