see CHANGES: IMAP/To: bug, Trash delete, de.po, sendmail support, AvantGo

--- a/locale/Makefile
+++ b/locale/Makefile
@@ -20,7 +20,10 @@ all:	$(FILES_MO)
 clean:
 	$(RM) $(FILES_MO) wxstd/*.mo
 
-update: msgcat mergecat check
+update: 
+	$(MAKE) msgcat 
+	$(MAKE) mergecat
+	$(MAKE) check
 	@true
 
 check:
