added c-library check for res_init

--- a/configure.in
+++ b/configure.in
@@ -456,6 +456,7 @@ AC_CHECK_LIB(shadow,main)
 
 dnl libresolv or libbind (or simply libc under FreeBSD)
 USE_RBL=1
+AC_CHECK_FUNC(res_init,,
 AC_CHECK_LIB(resolv,res_init,,
 	AC_CHECK_LIB(bind,res_init,,
       AC_CHECK_LIB(c,res_init,,
@@ -465,6 +466,7 @@ AC_CHECK_LIB(resolv,res_init,,
          ]
       )
    )
+)
 )
 case "$USE_RBL" in 1) AC_DEFINE(USE_RBL) ;; esac
 
