new bugzilla location

--- a/configure.in
+++ b/configure.in
@@ -256,7 +256,7 @@ case "$m_cv_cxx_opernames" in yes)
 	names which your compiler treats as keywords (the new logical
 	operator names: and, or, not, etc.).  We currently don't know a
 	workaround for your compiler.  If it does accept some flag for
-	disabling them, please go to http://www.wxwindows.org/m-bugs
+	disabling them, please go to http://mahogany.sourceforge.net/bugz
 	and submit a bug against the Build component telling us which
 	flag will work.]) ;;
 		*)	CXXFLAGS="$CXXFLAGS $m_cv_cxx_disableopernames"
@@ -272,7 +272,7 @@ yes)	CXXFLAGS="$CXXFLAGS -MD" ;;
 	Dependencies are not supported for this compiler.  If this
 	message appears, then we need to talk---we think we know
 	how to fix this, but we don't have a machine where we can
-	test it.  Please go to http://www.wxwindows.org/m-bugs and
+	test it.  Please go to http://mahogany.sourceforge.net/bugz and
 	submit a bug against the Build component so we can give
 	you some code to try.]);;
 esac
