--- a/makeopts.in
+++ b/makeopts.in
@@ -6,10 +6,23 @@ SOURCEDIR := @SOURCEDIR@
 BUILDDIR  := @BUILDDIR@
 top_builddir := @BUILDDIR@
 
-# the c-client library:
-CCLIENTOSTYPE=@CCOSTYPE@
-CCLIENT_EXTRAAUTHENTICATORS=@CCLIENT_EXTRAAUTHENTICATORS@
-CCLIENT_EXTRACFLAGS=EXTRACFLAGS="@CCLIENT_EXTRACFLAGS@"
+# the c-client (imap) library:
+CCLIENTOSTYPE := @CCOSTYPE@
+CCLIENT_EXTRAAUTHENTICATORS := @CCLIENT_EXTRAAUTHENTICATORS@
+CCLIENT_EXTRACFLAGS := @CCLIENT_EXTRACFLAGS@
+IMAP_CPPFLAGS := @IMAP_CPPFLAGS@
+IMAP_CFLAGS := @IMAP_CFLAGS@
+IMAP_CXXFLAGS := @IMAP_CXXFLAGS@
+
+# the compface library:
+CFACE_CPPFLAGS := @CFACE_CPPFLAGS@
+CFACE_CFLAGS := @CFACE_CFLAGS@
+CFACE_CXXFLAGS := @CFACE_CXXFLAGS@
+
+# the libmal library:
+LIBMAL_CPPFLAGS := @LIBMAL_CPPFLAGS@
+LIBMAL_CFLAGS := @LIBMAL_CFLAGS@
+LIBMAL_CXXFLAGS := @LIBMAL_CXXFLAGS@
 
 # where we have the Icon xpms:
 ICONDIR=$(SOURCEDIR)/src/icons
